# Simon-s-html-front-end-for-MPMBs-Character-Record-Sheet

./: .gitignore  Cargo.toml  Limited_features_setAction_strings.txt  README.md  SetThisFldVal_fields.txt  adapter.js  apply_transformation.py  apply_transformation2.py  base.min.css  build.sh  cert.crt  cert.key  cert.pem  clippy.toml  fieldnames_continue.txt  fields_continue.txt  index.html  keystroke_format_examples.txt  ps_style.css  rustfmt.toml  separate_svg.py  server.py  style.css  style2.css  test.sh  todo.txt  transform_svg.py
.github/workflows/: pr.yml  release.yml
_functions/: AbilityScores.js  AbilityScores_old.js  ClassSelection.js  Functions0.js  Functions1.js  Functions2.js  Functions3.js  FunctionsImport.js  FunctionsResources.js  FunctionsSpells.js  Startup.js
_variables/: Lists.js  ListsClasses.js  ListsFeats.js  ListsMagicItems.js  ListsRaces.js
additional content syntax/: _common attributes.js  feat (FeatsList).js  magic item (MagicItemsList).js
additional content/3rd-party compendium pre-v13/: Kibbles Compendium of Craft and Creation (v1.1.3).js  Tal'Dorei Campaign Setting (Critical Role).js
additional content/Classes pre-v13/: Alchemist [DawnforgedCast's work, transcribed by PbFarmer] (incomplete).js  Blood Hunter [Matthew Mercer's work, transcribed by Darryl & MPMB].js  Cardcaster [EN World En5ider, transcribed by MPMB].js  Justiciar [Ross Leiser's work, transcribed by MPMB].js  Shadowcaster [lysian09's work, transcribed by MPMB].js  Shaman [Michael Wolf's work, transcribed by Derek, Fourleafclov, MPMB].js
html/: apply_transformation.py  compatibility.min.js  fancy.min.css  index.html  page_appearance_background.html  page_companion.html  page_features_equipment.html  page_notes.html  page_notes_feats.html  page_reference.html  page_stats.html  pdf2htmlEX.min.js  separate_svg.py  style.css  style2.css
html/page_1/: page_stats.html
import_utils/: overwrite_Functions0.js  overwrite_Functions1.js  overwrite_FunctionsSpells.js  overwrite_Startup.js
js/: app_adapter.js  controller.js  dialog_manager.js  event_manager.js  utils.js
overflow_page/: Zegran_Avernai_overflow.css  base.min.css  fancy.min.css
pages/: page_appearance_background.html  page_companion.html  page_features_equipment.html  page_notes.html  page_notes_feats.html  page_overflow.html  page_reference.html  page_spells.html  page_spells_more.html  page_stats.html  page_wildshape.html
src/: config.rs  lib.rs  utils.rs
(+59 files in other folders)
