[package]
name = "simons_dnd_character_sheet"
version = "0.0.1"
authors = ["Simon"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
regex = "1.10.3"
leptos = { version = "0.6.7", features = ["csr"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = "1.0.197"
gloo-utils = { version = "0.1", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "DomTokenList",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-cli = "0.2.92"
wasm-bindgen-test = "0.3.40"

[profile.release]
opt-level = "s"
