[package]
name = "simons_dnd_character_sheet"
version = "0.2.0"
authors = ["Simon"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4.50"
regex = "1.11.1"
leptos = { version = "0.7.0", features = ["csr"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = "1.0.216"
gloo-utils = { version = "0.2.0", features = ["serde"] }
gloo-timers = "0.3.0"
uuid = { version = "1.11.0", features = ["v4", "js"] }
phf = { version = "0.11.2", features = ["macros"] }

[dependencies.web-sys]
version = "0.3.76"
features = [
  "Blob",
  "console",
  "Document",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlElement",
  "HtmlInputElement",
  "MouseEvent",
  "Node",
  "NodeList",
  "Window",
]

[dev-dependencies]
wasm-bindgen-cli = "=0.2.100"
wasm-bindgen-test = "0.3.49"

[profile.release]
opt-level = "s"
